# advent-of-code-cli

./: Cargo.toml  README.md
src/: main.rs  model.rs
