[package]
name = "aoc"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.29", features = ["derive"] }
eyre = "0.6.8"
reqwest = "0.11.13"
regex = "1.7.0"
tl = "0.7.7"
html2text = "0.4.4"
colored = "2.0.0"
serde = { version = "1.0.151", features = ["derive"] }
toml = "0.5.10"
async-recursion = "1.0.0"
chrono = "0.4.23"
