[package]
name = "aoc"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.10", features = ["derive"] }
eyre = "0.6.9"
reqwest = "0.11.22"
regex = "1.10.2"
html2text = "0.6.0"
colored = "2.0.4"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
async-recursion = "1.0.5"
chrono = "0.4.31"
scraper = "0.18"
